<resources>
    <string name="app_name">Погода</string>
    <string name="city_name">Города</string>
    <string name="region_name">Область</string>
    <string name="date">Сегодня</string>
    <string name="params">Облачно в течение всего дня</string>
    <string name="param_snow_text">Снег</string>
    <string name="param_cloudless_text">Безоблачно</string>
    <string name="temperature_snow">-2°</string>
    <string name="temperature_faringate">○</string>
    <string name="temperature">10°</string>
    <string name="todo">TODO</string>
    <string name="city">Москва</string>
    <string name="action_settings">Настройки</string>
    <string name="action_wind">Показать скорость ветра</string>
    <string name="deactivate_wind">Скрыть скорость ветра</string>
    <string name="action_humidity">Показать влажность</string>
    <string name="deactivate_humidity">Скрыть влажность</string>
    <string name="action_pressure">Показать давление</string>
    <string name="deactivate_pressure">Скрыть давление</string>
    <string name="time">14:11</string>
    <string name="humidity">влажность</string>
    <string name="humidity_value">55%</string>
    <string name="wind">скорость ветра</string>
    <string name="wind_value">4 м/с</string>
    <string name="pressure">давление</string>
    <string name="pressure_value">759 мм</string>
    <string name="darkTheme">темная тема</string>
    <string name="getHttp">Получить через интернет</string>
    <string name="whiteTheme">светлая тема</string>
    <string name="editWhiteTheme">Тема изменене на светлую</string>
    <string name="editDarkTheme">Тема изменене на темную</string>
    <string-array name="Cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
        <item>Новосибирск</item>
        <item>Самара</item>
    </string-array>
</resources>
