<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never|ifRoom|withText" />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_wind"
            android:checkable="true"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/deactivate_wind"
            app:showAsAction="never|withText|collapseActionView" />

        <item
            android:id="@+id/action_humidity"
            android:checkable="true"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/deactivate_humidity"
            app:showAsAction="never|withText|collapseActionView" />

        <item
            android:id="@+id/action_pressure"
            android:checkable="true"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/deactivate_pressure"
            app:showAsAction="never|withText|collapseActionView" />

        <item
            android:id="@+id/action_theme"
            android:checkable="true"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/darkTheme"
            app:showAsAction="never|withText|collapseActionView" />
    </group>

</menu>