<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    style="@style/main_params_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="@dimen/dp_10"
    tools:layout_editor_absoluteY="@dimen/dp_10">


    <TextView
        android:id="@+id/main_city"
        style="@style/main_params_linear_layout_text_view_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_temperature"
            style="@style/main_params_linear_layout_text_view_temperature"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_weight="3"
            android:text="@string/temperature"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/mainImageWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/rain" />

        <TextView
            android:id="@+id/main_text_info"
            style="@style/main_params_linear_layout_text_view_text_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/params" />
    </LinearLayout>

    <EditText
        android:id="@+id/main_date"
        style="@style/main_params_linear_layout_edit_text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <include layout="@xml/extra_options_layout_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>