<?xml version="1.0" encoding="utf-8"?><!-- макет списка -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_50"
        android:contentDescription="@string/todo"
        android:src="@drawable/moscow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_city_name"
            style="@style/list_item_linear_layout_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name" />

        <TextView
            android:id="@+id/main_region_name"
            style="@style/list_item_linear_layout_text_view_medium_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_name" />
    </LinearLayout>


</LinearLayout>
