<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/main_back_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/main_wind"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:alpha="0.7"
        android:background="@xml/rounded_corners"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">


        <TextView
            android:id="@+id/main_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingTop="20dp"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/mainImageWeather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/rain" />

            <TextView
                android:id="@+id/main_text_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingTop="20dp"
                android:text="@string/params"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/main_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="time"
            android:longClickable="false"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/humidity" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/humidity_value"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/wind" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/wind_value"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pressure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/pressure" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/pressure_value"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>